--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,64 +1,3 @@
-// .container {
-//   width: 1200px;
-//   margin: 0 auto;
-//   padding: 0 15px;
-// }
-
-// .footer {
-//   background-color: $footer-color;
-//   padding-top: 60px;
-//   padding-bottom: 60px;
-//   height: 252px;
-
-//   &-adress {
-//     font-size: 14px;
-//     line-height: 1.71;
-//     letter-spacing: 0.03em;
-//     color: #ffffff;
-//     display: inline-block;
-//     margin-bottom: 9px;
-//   }
-
-//   &-contacts-mail {
-//     font-size: 14px;
-//     line-height: 1.71;
-//     letter-spacing: 0.03em;
-//     color: rgba(255, 255, 255, 0.6);
-//     display: inline-block;
-//     margin-bottom: 9px;
-//   }
-
-//   &-contacts-tel {
-//     font-size: 14px;
-//     line-height: 1.71;
-//     letter-spacing: 0.03em;
-//     color: rgba(255, 255, 255, 0.6);
-//     display: inline-block;
-//   }
-
-//   &-flex {
-//     display: flex;
-//     justify-content: center;
-//     align-items: baseline;
-//   }
-
-//   &-title {
-//     font-family: $mainFont;
-//     font-style: normal;
-//     font-weight: bold;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.03em;
-//     text-transform: uppercase;
-
-//     color: #ffffff;
-//   }
-
-//   &-social {
-//     margin-left: 70px;
-//   }
-// }
-
 .footer {
   background-color: $footer-color;
   padding-top: 60px;
@@ -67,9 +6,22 @@
     padding-top: 0;
   }
 
+  @media screen and (min-width: $desktop) {
+    padding-bottom: 60px;
+    text-align: left;
+  }
+
   padding-bottom: 60px;
   height: auto;
   text-align: center;
+
+  &-flex {
+    @media screen and (min-width: $desktop) {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: baseline;
+    }
+  }
 
   &-adress {
     font-size: 14px;
@@ -111,13 +63,15 @@
     color: #ffffff;
   }
 
-  //   &-social {
-  //     margin-left: 70px;
-  //   }
+  &-social {
+    @media screen and (min-width: $desktop) {
+      margin-left: 70px;
+    }
+  }
 }
 
 .footer-flex-tablet {
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
