--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -53,7 +53,7 @@
 // }
 
 .hero {
-  max-width: 1600px;
+  width: 100%;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -79,10 +79,17 @@
 
     margin: 0 auto;
     margin-top: 0;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+      line-height: 60px;
+      width: 696px;
+      padding-top: 200px;
+    }
   }
 
   &-btn {
-    width: 1170px;
+    width: 1200px;
     font-weight: bold;
     font-size: 16px;
     line-height: 1.87;
