--- a/sass/components/_social--links.scss
+++ b/sass/components/_social--links.scss
@@ -1,46 +1,3 @@
-// .social-link {
-//   display: inline-flex;
-//   justify-content: center;
-//   align-items: center;
-//   border: 1px solid transparent;
-//   border-radius: 50%;
-//   width: 44px;
-//   height: 44px;
-//   color: #afb1b8;
-//   background-color: #fff;
-//   margin-top: 16px;
-//   margin-bottom: 16px;
-//   padding: 0;
-
-//   &-list {
-//     display: flex;
-//     justify-content: space-evenly;
-//     align-items: center;
-//   }
-
-//   &:first-child {
-//     margin-left: 32px;
-//   }
-
-//   &:last-child {
-//     margin-right: 32px;
-//   }
-
-//   &:hover,
-//   &:focus {
-//     transition: $hover-animation;
-//     color: #fff;
-//     background-color: $primary-accent-color;
-//     cursor: pointer;
-//   }
-// }
-
-// .social-icon {
-//   width: 20px;
-//   height: 20px;
-//   fill: currentColor;
-// }
-
 .social-link {
   display: inline-flex;
   justify-content: center;
@@ -67,6 +24,10 @@
     @media screen and (min-width: $tablet) {
       margin-left: 74px;
     }
+
+    @media screen and (min-width: $desktop) {
+      margin-left: 32px;
+    }
   }
 
   &:last-child {
@@ -74,6 +35,10 @@
 
     @media screen and (min-width: $tablet) {
       margin-right: 74px;
+    }
+
+    @media screen and (min-width: $desktop) {
+      margin-right: 32px;
     }
   }
 
