--- a/sass/components/_whatwedo.scss
+++ b/sass/components/_whatwedo.scss
@@ -123,6 +123,11 @@
       justify-content: space-between;
       margin-bottom: 30px;
     }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-bottom: 30px;
+    }
   }
 
   &-items {
@@ -136,7 +141,13 @@
     @media screen and (min-width: 768px) {
       width: calc((100% - 30px) / 2);
 
-      // margin-bottom: 30px;
+      &:first-child {
+        margin-top: 30px;
+      }
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
 
       &:first-child {
         margin-top: 30px;
@@ -199,5 +210,56 @@
 }
 
 .wedo-box {
-  display: none;
+  @media screen and (max-width: 1200px) {
+    display: none;
+  }
+}
+
+.wedo {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: $hr-text-color;
+  margin-top: 94px;
+
+  &-label {
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    background: rgba(47, 48, 58, 0.8);
+    padding-top: 27px;
+    padding-bottom: 27px;
+    padding-left: 83px;
+    padding-right: 82px;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+
+    color: #ffffff;
+  }
+}
+
+.list-items {
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  padding-left: 0;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding-bottom: 94px;
+}
+
+.list-item {
+  display: block;
+  position: relative;
 }
