--- a/sass/components/_modal--forms.scss
+++ b/sass/components/_modal--forms.scss
@@ -150,3 +150,9 @@
 
   color: var(--hr-text-color);
 }
+
+.modal-container {
+  @media screen and (min-width: $desktop) {
+    max-width: 448px;
+  }
+}
