--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,69 +1,26 @@
-// .hero {
-//   background-image: linear-gradient(
-//       to right,
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../images/bg-hero.jpg);
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   background-color: $footer-color;
-//   padding-top: 200;
-//   text-align: center;
-
-//   &-h {
-//     font-weight: 900;
-//     font-size: 44px;
-//     line-height: 60px;
-//     color: #ffffff;
-//     letter-spacing: 0.06em;
-//     text-transform: uppercase;
-//     width: 696px;
-//     padding-top: 200px;
-//     margin: 0 auto;
-//     margin-top: 0;
-//   }
-
-//   &-btn {
-//     width: 1170px;
-//     font-weight: bold;
-//     font-size: 16px;
-//     line-height: 1.87;
-//     color: #ffffff;
-//     background-color: $primary-accent-color;
-
-//     width: 200px;
-//     height: 50px;
-//     border-radius: 4px;
-//     border: none;
-
-//     margin-top: 30px;
-//     margin-bottom: 200px;
-//     margin-right: auto;
-//     margin-left: auto;
-//   }
-
-//   &-btn:hover,
-//   &-btn:focus {
-//     transition: $hover-animation;
-//     color: $primary-accent-color;
-//     background-color: white;
-//     cursor: pointer;
-//   }
-// }
-
 .hero {
   width: 100%;
+
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/bg-hero.jpg);
+    url("../images/mobile/header.jpg");
+
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   background-color: $footer-color;
+
+  @media screen and (min-width: $tablet) {
+    background-image: url("../images/tablet/header-tabl.jpg");
+  }
+
+  @media screen and (min-width: $desktop) {
+    background-image: url("../images/desktop/header-desk.jpg");
+  }
+
   text-align: center;
   margin-bottom: 30px;
 
