--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,58 +1,3 @@
-// .team {
-//   background-color: $secondary-bg-color;
-//   padding-top: 94px;
-//   padding-bottom: 94px;
-
-//   &-list {
-//     display: flex;
-//     width: 1170px;
-//     margin-top: 50px;
-//     margin-left: auto;
-//     margin-right: auto;
-//     justify-content: space-between;
-//   }
-
-//   &-title {
-//     font-weight: bold;
-//     font-size: 36px;
-//     line-height: 1.16;
-//     text-align: center;
-//     letter-spacing: 0.03em;
-//     color: $hr-text-color;
-//     margin: 0;
-//   }
-
-//   &-name {
-//     font-weight: 500;
-//     font-size: 16px;
-//     line-height: 1.18;
-//     letter-spacing: 0.03em;
-//     text-align: center;
-//     color: $hr-text-color;
-//     margin-top: 30px;
-//     margin-bottom: 10px;
-//   }
-
-//   &-pos {
-//     font-size: 16px;
-//     line-height: 1.18;
-//     letter-spacing: 0.03em;
-//     text-align: center;
-//     color: $primary-text-color;
-//     margin-top: 0;
-//     margin-bottom: 0;
-//   }
-
-//   &-card {
-//     width: 270px;
-//     height: 428px;
-//     background: #ffffff;
-//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-//       0px 2px 1px rgba(0, 0, 0, 0.2);
-//     border-radius: 0px 0px 4px 4px;
-//   }
-// }
-
 .team {
   background-color: $secondary-bg-color;
   padding-top: 60px;
@@ -130,10 +75,12 @@
 
     @media screen and(min-width:768px) {
       width: calc((100% - 30px) / 2);
+      height: 374px;
     }
 
     @media screen and(min-width:1200px) {
       width: 270px;
+      height: 260px;
     }
   }
 }
