--- a/sass/components/_footer--forms.scss
+++ b/sass/components/_footer--forms.scss
@@ -22,7 +22,7 @@
   width: 100%;
   height: 50px;
 
-  @media screen and (max-width: $desktop) {
+  @media screen and (min-width: $tablet) {
     width: 450px;
     display: block;
     position: relative;
@@ -33,6 +33,8 @@
   @media screen and (min-width: $desktop) {
     width: 358px;
     display: block;
+    left: 0;
+    transform: translate(0, 0);
   }
 
   border: 1px solid rgba(255, 255, 255, 0.3);
