--- a/css/main.css
+++ b/css/main.css
@@ -701,7 +701,7 @@ body {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/mobile/header.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-color: #2f303a;
   text-align: center;
   margin-bottom: 30px;
@@ -716,6 +716,7 @@ body {
 @media screen and (min-width: 1200px) {
   .hero {
     background-image: url("../images/bg-hero.jpg");
+    height: 600px;
   }
 }
 
@@ -730,6 +731,12 @@ body {
   padding-top: 118px;
   margin: 0 auto;
   margin-top: 0;
+}
+
+@media screen and (max-width: 400px) {
+  .hero-h {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1079,6 +1086,12 @@ body {
   margin-left: 122px;
 }
 
+@media screen and (max-width: 767px) {
+  .social-link:first-child {
+    margin-left: auto;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .social-link:first-child {
     margin-left: 74px;
@@ -1093,6 +1106,12 @@ body {
 
 .social-link:last-child {
   margin-right: 122px;
+}
+
+@media screen and (max-width: 767px) {
+  .social-link:last-child {
+    margin-right: auto;
+  }
 }
 
 @media screen and (min-width: 768px) {
