--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,7 @@
 
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   background-color: $footer-color;
 
   @media screen and (min-width: $tablet) {
@@ -19,6 +19,7 @@
 
   @media screen and (min-width: $desktop) {
     background-image: url("../images/bg-hero.jpg");
+    height: 600px;
   }
 
   text-align: center;
@@ -32,6 +33,11 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     width: 360px;
+
+    @media screen and (max-width: 400px) {
+      width: 100%;
+    }
+
     padding-top: 118px;
 
     margin: 0 auto;
