--- a/sass/components/_social--links.scss
+++ b/sass/components/_social--links.scss
@@ -21,6 +21,10 @@
   &:first-child {
     margin-left: 122px;
 
+    @media screen and (max-width: 767px) {
+      margin-left: auto;
+    }
+
     @media screen and (min-width: $tablet) {
       margin-left: 74px;
     }
@@ -32,6 +36,10 @@
 
   &:last-child {
     margin-right: 122px;
+
+    @media screen and (max-width: 767px) {
+      margin-right: auto;
+    }
 
     @media screen and (min-width: $tablet) {
       margin-right: 74px;
