--- a/sass/components/_footer--forms.scss
+++ b/sass/components/_footer--forms.scss
@@ -64,6 +64,7 @@
   background: $primary-accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: none;
 
   font-family: $mainFont;
   font-style: normal;
